# crosscheck-agent

./: .env.example  .gitignore  DESCRIPTION.md  LICENSE  README.md  crosscheck.config.example.json
.github/workflows/: ci.yml
schema/: config.schema.json
scripts/: crosscheck  setup.sh  smoke_jsonrpc.py
servers/perl/: README.md  cpanfile  crosscheck_server.pl
servers/python/: README.md  crosscheck_server.py
servers/rust/: Cargo.toml  README.md
servers/rust/src/: main.rs
servers/typescript/: README.md  package-lock.json  package.json
servers/typescript/src/: index.ts
