[package]
name        = "crosscheck-agent-rs"
version     = "0.1.0"
edition     = "2021"
description = "Rust MCP server for crosscheck-agent."
license     = "MIT"

[[bin]]
name = "crosscheck-agent-rs"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures     = "0.3"
